Disconnect timers early

When a TerminalDisplay is destroyed, the timers are still active
until they are deleted by QObject, so they could fire when anything
in the QWidget or QObject destructor processes events.

BUG: 208199

svn path=/trunk/KDE/kdebase/apps/konsole/; revision=1082643