src/TerminalDisplay.cpp
@@ -378,6 +378,8 @@ TerminalDisplay::TerminalDisplay(QWidget *parent)
 
 TerminalDisplay::~TerminalDisplay()
 {
+  disconnect(_blinkTimer);
+  disconnect(_blinkCursorTimer);
   qApp->removeEventFilter( this );
   
   delete[] _image;
